--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,12 @@
-# Host github.com
-#    HostName github.com
-#    user git
-#    IdentityFile ~/.ssh/github_rsa
+Host ubunt-lightsail
+    HostName 13.209.38.184
+    user ubuntu
+   IdentityFile ~/.ssh/LightsailDefaultKey-ap-northeast-2.pem
+
+Host github.com
+   HostName github.com
+   user git
+   IdentityFile ~/.ssh/github_rsa
 
 Host bitbucket.org
     HostName bitbucket.org
@@ -12,7 +17,36 @@ Host gitlab.kkinternal.com
     HostName gitlab.kkinternal.com
     user jordanhuang
     IdentityFile ~/.ssh/jordanhuang@gitlab.kkinternal.com_rsa
+
+Host gitlab.com
+    HostName gitlab.com
+    user jordan.huang@sis.ai
+    IdentityFile ~/.ssh/github_rsa
+
+Host td-server.sis.ai
+    HostName td-server.sis.ai
+    user jordan
+    IdentityFile ~/.ssh/id_rsa
+
+Host taiwanNet
+    HostName 140.110.148.11
+    user john6030212
+    IdentityFile ~/.ssh/taiwan_net_rsa
    
+Host fu.sis
+    HostName 192.168.66.79
+    user ubuntu
+    IdentityFile ~/.ssh/id_fuGlass
+
+Host fu.sis_official
+    HostName 10.112.20.70
+    user root
+    IdentityFile ~/.ssh/id_fuGlass
+
+Host poc.sis.ai
+    HostName 3.115.169.203
+    user jordan
+    IdentityFile ~/.ssh/id_rsa
 
 Host SCOPE
     HostName 140.114.85.224
