--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -266,6 +266,7 @@ map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
 map dd cut
+map DD shell trash %s
 map ud uncut
 map da cut mode=add
 map dr cut mode=remove
