--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,7 +2,9 @@
 # use tmux list-keys to show all key-binding
 
 #Soure Powerline configure
-source ~/anaconda3/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
+#source ~/anaconda3/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
+# theme
+source-file "${HOME}/.tmux-themepack/powerline/double/cyan.tmuxtheme"
 #Set the default terminal mode to 256 color
 set -g default-terminal "screen-256color"
 #Enable mouse scroll with switch to th pane
@@ -56,9 +58,10 @@ bind -r L resize-pane -R 20
 setw -g automatic-rename
 
 #Enable vim key
+# for version older than 3.x
 set -g status-keys vi
-bind -t vi-edit Up   history-up
-bind -t vi-edit Down history-down
+# bind -T vi-edit Up   history-up
+# bind -T vi-edit Down history-down
 
 #Bind L to last activate window
 bind a last-window
@@ -79,18 +82,21 @@ bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'ca
 ####################
 
 # Copy-paste integration
-# set-option -g default-command "reattach-to-user-namespace -l bash"
+if-shell 'test "$(uname)" = "Darwin"' \
+      'set-option -g default-command "reattach-to-user-namespace -l zsh"' ''
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# for version older than 3.x
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# for version older than 3.x
+# unbind -t vi-copy Enter
+# bind-key -T vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
@@ -100,3 +106,13 @@ set-option -sg escape-time 10
 
 # Renumber tmux window
 bind R  move-window -r\; display "Windows reordered..."
+
+# binding settings for 3.x
+# ref https://github.com/tmux/tmux/issues/754
+bind-key -T edit-mode-vi Up send-keys -X history-up
+bind-key -T edit-mode-vi Down send-keys -X history-down
+unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
+unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
+unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
