--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = good5dog5@gmail.com
-	name = Jordan Huang
+	email = jordan.huang@gapp.nthu.edu.tw
+	name = jordan
 [color]
    ui        = true
    diff      = auto
@@ -41,7 +41,7 @@
 [core]
    editor    = vim
 	attributesfile = /home/jordan/.gitattributes
-	excludesfile = /Users/jordanhuang/.gitignore_global
+	excludesfile = /Users/jordan/.gitignore_global
 [color "diff"]
    meta      = yellow bold
    frag      = magenta bold
@@ -54,7 +54,7 @@
 [diff]
 	tool = vimdiff
 [merge]
-    tool = vimdiff
+	tool = vimdiff
     conflictstyle = diff3
     prompt = false
 
@@ -68,4 +68,4 @@
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [commit]
-	template = /Users/jordanhuang/.stCommitMsg
+	template = /Users/jordan/.stCommitMsg
