--- a/.ssh/config
+++ b/.ssh/config
@@ -28,6 +28,23 @@ Host td-server.sis.ai
     user jordan
     IdentityFile ~/.ssh/id_rsa
 
+Host sygps.dev.sis.ai
+    HostName sygps.dev.sis.ai
+    user jordan
+    IdentityFile ~/.ssh/id_rsa
+
+Host sygps.qa.sis.ai
+    HostName sygps.qa.sis.ai
+    user jordan
+    IdentityFile ~/.ssh/id_rsa
+
+Host sygps.sis.ai
+    HostName sygps.sis.ai
+    user jordan
+    IdentityFile ~/.ssh/id_rsa
+
+Host 2016年10月每毫秒float_pos_neg
+
 Host taiwanNet
     HostName 140.110.148.11
     user john6030212
