--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,10 +11,6 @@ set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 
-#Use UTF - 8
-set -g utf8 on
-set-option -g  status-utf8 on
-set-window-option -g utf8 on
 set-option -g history-limit 5000
 
 #Enable utf-8 on status bar
@@ -72,7 +68,7 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n 'C-\'  if-shell "$is_vim" "send-keys 'C-\\'" "select-pane -l"
 
 # Save history buffer to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
@@ -82,7 +78,7 @@ bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'ca
 ####################
 
 # Copy-paste integration
-if-shell 'test "$(uname)" = "Darwin"' \
+if-shell -b 'test "$(uname)" = "Darwin"' \
       'set-option -g default-command "reattach-to-user-namespace -l zsh"' ''
 
 # Use vim keybindings in copy mode
