--- a/.ssh/config
+++ b/.ssh/config
@@ -8,6 +8,10 @@ Host github.com
    user git
    IdentityFile ~/.ssh/github_rsa
 
+Host github.com-repo0
+    Hostname github.com
+    IdentityFile=~/.ssh/avma_github_repo_rsa
+
 Host bitbucket.org
     HostName bitbucket.org
     user git
@@ -57,6 +61,11 @@ Host fu.sis
 
 Host fu.sis_official
     HostName 10.112.20.70
+    user root
+    IdentityFile ~/.ssh/id_fuGlass
+
+Host fu.sis_official_61
+    HostName 10.112.20.61
     user root
     IdentityFile ~/.ssh/id_fuGlass
 
@@ -183,4 +192,21 @@ Host jordanhuang-s3-video-size-calculation
    ProxyCommand ssh -q -W %h:%p test
    IdentityFile /Users/jordanhuang/.ssh/jordanhuang.pem
    ForwardAgent yes
+
+Host AVMA-prod
+   User ubuntu
+   HostName ec2-54-251-151-232.ap-southeast-1.compute.amazonaws.com
+   IdentityFile ~/.ssh/AVMapping_V2.pem
+   LocalForward 52698 localhost:52698
+   
+Host AVMA-internal
+   User ubuntu
+   HostName 114.34.169.31
+   Port 2022
+   IdentityFile ~/.ssh/avmapping_id_rsa
+
+Host AVMA-dev
+   User ubuntu
+   HostName  203.145.222.31
+   IdentityFile ~/.ssh/avma_dev_kp1609133459408.pem
 
