--- a/.gitconfig
+++ b/.gitconfig
@@ -54,9 +54,11 @@
 [diff]
 	tool = vimdiff
 [merge]
-	tool = vimdiff
-    conflictstyle = diff3
-    prompt = false
+        tool = meld
+[mergetool "meld"]
+        # Choose one of these 2 lines (not both!) explained below.
+        #cmd = meld "$LOCAL" "$MERGED" "$REMOTE" --output "$MERGED"
+        cmd = meld "$LOCAL" "$BASE" "$REMOTE" --output "$MERGED"
 
 [filter "clean_ipynb"]
     clean = jq --indent 1 --monochrome-output '. + if .metadata.git.suppress_outputs | not then { cells: [.cells[] | . + if .cell_type == \"code\" then { outputs: [], execution_count: null } else {} end ] } else {} end'
