--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,10 @@
+# For ailabs
+
+Host nas11
+    HostName nas11.corp.ailabs.tw
+    user admin
+    IdentityFile ~/.ssh/jordan@nas.ailiabs.tw
+
 Host ubunt-lightsail
     HostName 13.209.38.184
     user ubuntu
@@ -26,6 +33,11 @@ Host gitlab.com
     HostName gitlab.com
     user jordan.huang@sis.ai
     IdentityFile ~/.ssh/github_rsa
+
+Host gitlab.corp.ailabs.tw
+    HostName gitlab.corp.ailabs.tw
+    user jordan.huang
+    IdentityFile ~/.ssh/ailabs_gitlab_rsa
 
 Host td-server.sis.ai
     HostName td-server.sis.ai
