--- a/.ssh/config
+++ b/.ssh/config
@@ -1,9 +1,24 @@
 # For ailabs
+Host nas7
+    HostName nas7.corp.ailabs.tw
+
+Host nas8
+    HostName nas8.corp.ailabs.tw
+
+Host nas9
+    HostName nas9.corp.ailabs.tw
+
+Host nas10
+    HostName nas10.corp.ailabs.tw
 
 Host nas11
     HostName nas11.corp.ailabs.tw
-    user admin
+
+Host nas7 nas8 nas9 nas10 nas11
+    user nas-admin
     IdentityFile ~/.ssh/jordan@nas.ailiabs.tw
+
+
 
 Host ubunt-lightsail
     HostName 13.209.38.184
