--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,17 @@
 # For ailabs
+
+Host linode
+    HostName 103.29.69.205
+    user jordan
+    IdentityFile ~/.ssh/jordan-linode
+
+Host decOcr
+    HostName localhost
+    user ocr
+    port 10022
+    ForwardAgent yes
+    ProxyCommand ssh -q -W %h:%p linode
+
 Host nas7
     HostName nas7.corp.ailabs.tw
 
@@ -14,10 +27,18 @@ Host nas10
 Host nas11
     HostName nas11.corp.ailabs.tw
 
-Host nas7 nas8 nas9 nas10 nas11
+Host nasN
+    HostName 10.2.240.250
+
+Host nas7 nas8 nas9 nas10 nas11 nasN
     user nas-admin
     IdentityFile ~/.ssh/jordan@nas.ailiabs.tw
 
+
+Host decGroup
+    Hostname 172.16.99.128
+    user jordan
+    IdentityFile ~/.ssh/jordan@decision_rsa
 
 
 Host ubunt-lightsail
@@ -29,6 +50,11 @@ Host github.com
    HostName github.com
    user git
    IdentityFile ~/.ssh/github_rsa
+
+Host gitlab.com
+   HostName gitlab.com
+   user git
+   IdentityFile ~/.ssh/jordan@gitlab
 
 Host github.com-repo0
     Hostname github.com
