--- a/.gitconfig
+++ b/.gitconfig
@@ -17,8 +17,7 @@
 
    bo        = fetch origin
    fu        = fetch upstream
-   po        = push origin
-   po        = push origin
+   po        = pull origin
    pu        = pull --rebase origin master
     # one-line log
    l         = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short
@@ -37,6 +36,8 @@
 
    prev = checkout HEAD^1
    next = "!sh -c 'git log --reverse --pretty=%H master | awk \"/$(git rev-parse HEAD)/{getline;print}\" | xargs git checkout'"
+
+   amend     = commit -a --amend --no-edit
 
 [core]
    editor    = vim
@@ -73,3 +74,5 @@
 	template = /Users/jordan/.stCommitMsg
 [pull]
 	rebase = true
+[rerere]
+	enabled = false
