--- a/.ssh/config
+++ b/.ssh/config
@@ -1,9 +1,28 @@
+Include 7coin.config
+
+Host *
+    ServerAliveInterval 240
+
+Host trgn
+    HostName trgn.usc.edu
+    user chiayunk
+    IdentityFile ~/.ssh/chiayunk@trgn.usc.edu
+
 # For ailabs
 
 Host linode
-    HostName 103.29.69.205
+    HostName 139.162.81.82
+    port 9898
     user jordan
     IdentityFile ~/.ssh/jordan-linode
+    ForwardX11 yes
+
+Host x300
+    HostName localhost
+    user jordan
+    port 10022
+    ForwardAgent yes
+    ProxyCommand ssh -q -W %h:%p linode
 
 Host decOcr
     HostName localhost
@@ -11,6 +30,19 @@ Host decOcr
     port 10022
     ForwardAgent yes
     ProxyCommand ssh -q -W %h:%p linode
+
+Host lab3-jumper
+    HostName localhost
+    user root
+    port 10023
+    ForwardAgent yes
+    ProxyCommand ssh -q -W %h:%p linode
+
+Host wsl
+    HostName ws1.corp.ailabs.tw
+    user jordan_l
+    ForwardAgent yes
+    IdentityFile ~/.ssh/jordan@ws1.corp.ailabs.tw
 
 Host nas7
     HostName nas7.corp.ailabs.tw
@@ -65,15 +97,17 @@ Host bitbucket.org
     user git
     IdentityFile ~/.ssh/id_rsa_bitbucket
 
-Host gitlab.kkinternal.com
-    HostName gitlab.kkinternal.com
-    user jordanhuang
-    IdentityFile ~/.ssh/jordanhuang@gitlab.kkinternal.com_rsa
 
 Host gitlab.com
     HostName gitlab.com
     user jordan.huang@sis.ai
     IdentityFile ~/.ssh/github_rsa
+
+Host gitlab.com-7coin
+    HostName gitlab.com
+    user kcy
+    IdentityFile ~/.ssh/kcy@gitlab.com
+
 
 Host gitlab.corp.ailabs.tw
     HostName gitlab.corp.ailabs.tw
@@ -209,33 +243,6 @@ HOST stag
    IdentityFile /Users/jordanhuang/.ssh/jordan@kkstream.com_rsa
    ForwardAgent yes
 
-
-# Production
-Host 10.15.*.* videopass-production* prod-*
-   StrictHostKeyChecking no
-   IdentityFile /Users/jordanhuang/.ssh/jordan@kkstream.com_rsa
-   User ubuntu
-   HostName %h
-   ProxyCommand ssh -q -W %h:%p prod
-   ForwardAgent yes
-
-# Staging
-Host 10.13.*.* videopass-staging* stag-*
-   StrictHostKeyChecking no
-   IdentityFile /Users/jordanhuang/.ssh/jordan@kkstream.com_rsa
-   User ubuntu
-   HostName %h
-   ProxyCommand ssh -q -W %h:%p stag
-   ForwardAgent yes
-
-# Testing
-Host 10.9.*.* videopass-testing* test-*
-   StrictHostKeyChecking no
-   IdentityFile /Users/jordanhuang/.ssh/jordan@kkstream.com_rsa
-   User ubuntu
-   HostName %h
-   ProxyCommand ssh -q -W %h:%p test
-   ForwardAgent yes
 
 Host jordanhuang-s3-video-size-calculation
    StrictHostKeyChecking no
