--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,6 +11,7 @@ set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 
+set-option -g allow-rename off 
 set-option -g history-limit 5000
 
 #Enable utf-8 on status bar
